The deployed API is integrated

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_RECAPTCHA_SITE_KEY=6LfEdzUsAAAAADYLbog-_DVd_Clpu7mj3Lldy9oq
+REACT_APP_API_BASE_URL=https://mythica-jewels-backend.onrender.com/api
